--- a/src/app/shared/components/auth/signin-form/signin-form.component.html
+++ b/src/app/shared/components/auth/signin-form/signin-form.component.html
@@ -4,7 +4,7 @@
       class="inline-flex items-center text-sm text-gray-500 transition-colors hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300"
     >
       <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" class="size-5"><path d="M12.7083 5L7.5 10.2083L12.7083 15.4167" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-      Back to dashboard
+      Back to homepage
     </a>
   </div>
 
@@ -96,9 +96,14 @@
             placeholder="info@gmail.com"
             [(value)]="email"
             (input)="clearError()"
+            (blur)="validateEmail()"
             name="email"
+            autocomplete="email"
             [required]="true"
           />
+          @if (emailError) {
+            <p class="mt-1 text-xs text-red-600 dark:text-red-400">{{ emailError }}</p>
+          }
         </div>
 
         <div>
@@ -110,6 +115,7 @@
               [(value)]="password"
               (input)="clearError()"
               name="password"
+              autocomplete="current-password"
               [required]="true"
             />
             <span
