added home and updated the routing and updated the theme colour

--- a/src/app/shared/layout/app-sidebar/app-sidebar.component.html
+++ b/src/app/shared/layout/app-sidebar/app-sidebar.component.html
@@ -22,7 +22,7 @@
       'justify-start': (isExpanded$ | async) || (isHovered$ | async)
     }"
   >
-    <a routerLink="/">
+    <a routerLink="/dashboard">
       @if ((isExpanded$ | async) || (isHovered$ | async) || (isMobileOpen$ | async)) {
       <img
         class="dark:hidden"
