--- a/src/app/shared/layout/app-header/app-header.component.html
+++ b/src/app/shared/layout/app-header/app-header.component.html
@@ -26,7 +26,7 @@
         }
       </button>
       <!-- Logo (placeholder) -->
-      <a routerLink="/" class="xl:hidden">
+      <a routerLink="/dashboard" class="xl:hidden">
         <img class="dark:hidden" src="/images/logo/logo.svg" alt="Logo" />
         <img class="hidden dark:block" src="/images/logo/logo-dark.svg" alt="Logo" />
       </a>
