updated I don't know what

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,12 +48,12 @@ layer(base);
   --color-brand-200: #ffd199;
   --color-brand-300: #ffba66;
   --color-brand-400: #ffa333;
-  --color-brand-500: #ff9933;
+  --color-brand-500: #ff8800;
   --color-brand-600: #e67a00;
-  --color-brand-700: #b35f00;
-  --color-brand-800: #804400;
-  --color-brand-900: #663600;
-  --color-brand-950: #331b00;
+  --color-brand-700: #cc6600;
+  --color-brand-800: #b35f00;
+  --color-brand-900: #804400;
+  --color-brand-950: #663600;
 
   --color-blue-light-25: #f5fbff;
   --color-blue-light-50: #f0f9ff;
