--- a/src/app/shared/components/ecommerce/ecommerce-metrics/ecommerce-metrics.component.html
+++ b/src/app/shared/components/ecommerce/ecommerce-metrics/ecommerce-metrics.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:gap-6">
   <!-- Metric Item Start -->
   <div class="rounded-2xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-white/[0.03] md:p-6">
-    <div class="flex items-center justify-center w-12 h-12 bg-gray-100 rounded-xl dark:bg-gray-800" [innerHTML]="icons.groupIcon | safeHtml">
+    <div class="flex items-center justify-center w-12 h-12 bg-gray-100 rounded-xl dark:bg-gray-800" [innerHTML]="icons.groupIcon | safeHtml:true">
     </div>
     <div class="flex items-end justify-between mt-5">
       <div>
@@ -9,7 +9,7 @@
         <h4 class="mt-2 font-bold text-gray-800 text-title-sm dark:text-white/90">3,782</h4>
       </div>
       <app-badge color="success">
-        <span [innerHTML]="icons.arrowUpIcon | safeHtml"></span>
+        <span [innerHTML]="icons.arrowUpIcon | safeHtml:true"></span>
         11.01%
       </app-badge>
     </div>
@@ -18,7 +18,7 @@
 
   <!-- Metric Item Start -->
   <div class="rounded-2xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-white/[0.03] md:p-6">
-    <div class="flex items-center justify-center w-12 h-12 bg-gray-100 rounded-xl dark:bg-gray-800" [innerHTML]="icons.boxIconLine| safeHtml">
+    <div class="flex items-center justify-center w-12 h-12 bg-gray-100 rounded-xl dark:bg-gray-800" [innerHTML]="icons.boxIconLine| safeHtml:true">
     </div>
     <div class="flex items-end justify-between mt-5">
       <div>
@@ -26,7 +26,7 @@
         <h4 class="mt-2 font-bold text-gray-800 text-title-sm dark:text-white/90">5,359</h4>
       </div>
       <app-badge color="error">
-        <span [innerHTML]="icons.arrowDownIcon | safeHtml"></span>
+        <span [innerHTML]="icons.arrowDownIcon | safeHtml:true"></span>
         9.05%
       </app-badge>
     </div>
