--- a/src/app/shared/components/ui/alert/alert.component.html
+++ b/src/app/shared/components/ui/alert/alert.component.html
@@ -1,6 +1,6 @@
 <div class="rounded-xl border p-4" [ngClass]="variantClasses.container">
   <div class="flex items-start gap-3">
-    <div class="-mt-0.5" [ngClass]="variantClasses.icon" [innerHTML]="iconSvg | safeHtml"></div>
+    <div class="-mt-0.5" [ngClass]="variantClasses.icon" [innerHTML]="iconSvg | safeContent:'bypass'"></div>
 
     <div>
       <h4 class="mb-1 text-sm font-semibold text-gray-800 dark:text-white/90">
